Layouts for wear.

--- a/android/mwmwear/src/main/res/layout/round_activity_main.xml
+++ b/android/mwmwear/src/main/res/layout/round_activity_main.xml
@@ -6,11 +6,8 @@
                 tools:context=".MainActivity"
                 tools:deviceIds="wear_round">
 
-  <TextView
-      android:id="@+id/text"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_centerHorizontal="true"
-      android:layout_centerVertical="true"
-      android:text="@string/hello_round"/>
+  <android.support.wearable.view.GridViewPager
+      android:id="@+id/vp__main"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
 </RelativeLayout>
