--- a/android/mwmwear/src/main/res/layout/fragment_search.xml
+++ b/android/mwmwear/src/main/res/layout/fragment_search.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
-    android:id="@+id/iv__map"
-    android:background="@android:color/holo_red_dark"
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scaleType="center">
-</ImageView>
+    android:background="@android:color/holo_red_dark">
+
+  <WearableListView
+      android:id="@+id/lv__categories"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:scrollbars="vertical"/>
+
+</RelativeLayout>
