--- a/android/mwmwear/src/main/res/layout/item_search.xml
+++ b/android/mwmwear/src/main/res/layout/item_search.xml
@@ -15,7 +15,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:contentDescription="@null"/>
+        android:contentDescription="@null"
+        android:scaleType="center"
+        android:src="@drawable/bg_search_green"/>
 
     <TextView
         android:id="@+id/tv__distance"
