--- a/android/mwmwear/src/main/res/layout/fragment_arrow.xml
+++ b/android/mwmwear/src/main/res/layout/fragment_arrow.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
-    android:id="@+id/iv__map"
-    android:background="@android:color/holo_purple"
+<android.support.wearable.view.WatchViewStub
+    android:id="@+id/search_view_stub"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scaleType="center">
-</ImageView>
+    app:rectLayout="@layout/fragment_arrow_square"
+    app:roundLayout="@layout/fragment_arrow_circle"
+    tools:deviceIds="wear">
+</android.support.wearable.view.WatchViewStub>
