--- a/iphone/Maps/Classes/CustomViews/MapViewControls/BottomMenu/MWMBottomMenuViewController.xib
+++ b/iphone/Maps/Classes/CustomViews/MapViewControls/BottomMenu/MWMBottomMenuViewController.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MWMBottomMenuViewController">
@@ -35,24 +36,13 @@
                                 <action selector="locationButtonTouchUpInside:" destination="-1" eventType="touchUpInside" id="8yA-JL-DUf"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xQ0-ZK-UXk" userLabel="P2P">
-                            <rect key="frame" x="64" y="0.0" width="64" height="48"/>
-                            <animations/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            <accessibility key="accessibilityConfiguration" identifier="p2pButton"/>
-                            <state key="normal" image="ic_menu_point_to_point"/>
-                            <state key="highlighted" image="ic_menu_point_to_point_press"/>
-                            <connections>
-                                <action selector="point2PointButtonTouchUpInside:" destination="-1" eventType="touchUpInside" id="s4j-nH-gFP"/>
-                            </connections>
-                        </button>
                         <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IzQ-aQ-aPH" userLabel="Search">
-                            <rect key="frame" x="128" y="0.0" width="64" height="48"/>
+                            <rect key="frame" x="74" y="0.0" width="64" height="48"/>
                             <animations/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <accessibility key="accessibilityConfiguration" identifier="searchButton"/>
                             <constraints>
-                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="64" identifier="searchWidth" id="5xY-fR-Lyf"/>
+                                <constraint firstAttribute="width" constant="64" id="xv4-ae-BtI"/>
                             </constraints>
                             <state key="normal" image="ic_menu_search"/>
                             <state key="selected" image="ic_menu_search_press"/>
@@ -62,10 +52,13 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qVh-dm-DDH" userLabel="Bookmarks">
-                            <rect key="frame" x="192" y="0.0" width="64" height="48"/>
+                            <rect key="frame" x="181.5" y="0.0" width="64" height="48"/>
                             <animations/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <accessibility key="accessibilityConfiguration" identifier="bookmarksButton"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="64" id="EO5-0o-SIU"/>
+                            </constraints>
                             <state key="normal" image="ic_menu_bookmark_list_light"/>
                             <state key="highlighted" image="ic_menu_bookmark_list_light_press"/>
                             <connections>
@@ -149,27 +142,22 @@
                         <constraint firstItem="pLD-sZ-ejH" firstAttribute="centerY" secondItem="kbJ-If-gUR" secondAttribute="centerY" id="8pC-El-6t1"/>
                         <constraint firstAttribute="trailing" secondItem="YLY-C4-SBu" secondAttribute="trailing" identifier="menuTrailing" id="Ade-MQ-41P"/>
                         <constraint firstItem="WLn-2O-Ivv" firstAttribute="centerY" secondItem="YLY-C4-SBu" secondAttribute="centerY" constant="-8" id="CjF-ja-g56"/>
-                        <constraint firstItem="xQ0-ZK-UXk" firstAttribute="leading" secondItem="s0b-7N-YrO" secondAttribute="trailing" id="CsE-Ze-6GH"/>
-                        <constraint firstItem="pLD-sZ-ejH" firstAttribute="centerX" secondItem="kbJ-If-gUR" secondAttribute="centerX" priority="750" identifier="goCenterX" id="DdJ-8V-P6l"/>
-                        <constraint firstItem="YLY-C4-SBu" firstAttribute="leading" secondItem="qVh-dm-DDH" secondAttribute="trailing" id="E1V-vw-ChS"/>
                         <constraint firstItem="YLY-C4-SBu" firstAttribute="leading" secondItem="xr9-L5-hTa" secondAttribute="trailing" id="EUq-Er-fF7"/>
                         <constraint firstItem="YLY-C4-SBu" firstAttribute="centerY" secondItem="kbJ-If-gUR" secondAttribute="centerY" id="Hly-tK-GHj"/>
                         <constraint firstAttribute="bottom" secondItem="xr9-L5-hTa" secondAttribute="bottom" id="Hoa-pH-Xi9"/>
-                        <constraint firstItem="IzQ-aQ-aPH" firstAttribute="centerX" secondItem="kbJ-If-gUR" secondAttribute="centerX" priority="750" identifier="sezrchCenterX" id="J94-gP-chL"/>
                         <constraint firstItem="IzQ-aQ-aPH" firstAttribute="height" secondItem="kbJ-If-gUR" secondAttribute="height" id="JFI-3b-72w"/>
-                        <constraint firstItem="IzQ-aQ-aPH" firstAttribute="leading" secondItem="xQ0-ZK-UXk" secondAttribute="trailing" id="M93-JY-Wuu"/>
                         <constraint firstItem="qVh-dm-DDH" firstAttribute="centerY" secondItem="kbJ-If-gUR" secondAttribute="centerY" id="Rgu-Ok-h30"/>
                         <constraint firstItem="s0b-7N-YrO" firstAttribute="leading" secondItem="kbJ-If-gUR" secondAttribute="leading" identifier="locationLeading" id="S6T-lV-BoU"/>
-                        <constraint firstItem="xQ0-ZK-UXk" firstAttribute="height" secondItem="kbJ-If-gUR" secondAttribute="height" id="WRQ-HY-d1P"/>
                         <constraint firstItem="qVh-dm-DDH" firstAttribute="height" secondItem="kbJ-If-gUR" secondAttribute="height" id="d2K-hv-PmH"/>
                         <constraint firstItem="YLY-C4-SBu" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="pLD-sZ-ejH" secondAttribute="trailing" id="eZr-YW-5Wq"/>
-                        <constraint firstItem="qVh-dm-DDH" firstAttribute="leading" secondItem="IzQ-aQ-aPH" secondAttribute="trailing" id="iUh-tw-12A"/>
+                        <constraint firstItem="IzQ-aQ-aPH" firstAttribute="centerX" secondItem="kbJ-If-gUR" secondAttribute="centerX" multiplier="2:3" id="fE8-rK-uG9"/>
                         <constraint firstItem="WLn-2O-Ivv" firstAttribute="centerX" secondItem="YLY-C4-SBu" secondAttribute="centerX" constant="8" id="lUQ-gw-psA"/>
                         <constraint firstItem="s0b-7N-YrO" firstAttribute="height" secondItem="kbJ-If-gUR" secondAttribute="height" id="nMi-k1-EhE"/>
+                        <constraint firstItem="pLD-sZ-ejH" firstAttribute="centerX" secondItem="kbJ-If-gUR" secondAttribute="centerX" id="nTI-os-Xq1"/>
                         <constraint firstItem="IzQ-aQ-aPH" firstAttribute="centerY" secondItem="kbJ-If-gUR" secondAttribute="centerY" id="nbW-x7-1M5"/>
                         <constraint firstItem="pLD-sZ-ejH" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="s0b-7N-YrO" secondAttribute="trailing" id="rSG-G7-knr"/>
+                        <constraint firstItem="qVh-dm-DDH" firstAttribute="centerX" secondItem="kbJ-If-gUR" secondAttribute="centerX" multiplier="4:3" id="sQB-uy-oHs"/>
                         <constraint firstItem="YLY-C4-SBu" firstAttribute="height" secondItem="kbJ-If-gUR" secondAttribute="height" id="wGb-xV-jeL"/>
-                        <constraint firstItem="xQ0-ZK-UXk" firstAttribute="centerY" secondItem="kbJ-If-gUR" secondAttribute="centerY" id="xfg-wf-76Q"/>
                     </constraints>
                 </view>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nYy-JN-hGA" userLabel="Separator">
@@ -222,7 +210,6 @@
                 <outlet property="locationButton" destination="s0b-7N-YrO" id="Oc3-yY-DPM"/>
                 <outlet property="mainButtons" destination="kbJ-If-gUR" id="1sk-bi-6xl"/>
                 <outlet property="menuButton" destination="YLY-C4-SBu" id="A5G-Bc-IlQ"/>
-                <outlet property="p2pButton" destination="xQ0-ZK-UXk" id="9m1-MT-C9s"/>
                 <outlet property="searchButton" destination="IzQ-aQ-aPH" id="2dy-QI-T39"/>
                 <outlet property="separator" destination="nYy-JN-hGA" id="z8u-tH-WGu"/>
                 <outlet property="streetLabel" destination="xr9-L5-hTa" id="xHt-2V-nZj"/>
@@ -234,8 +221,6 @@
         <image name="ic_menu_bookmark_list_light" width="48" height="48"/>
         <image name="ic_menu_bookmark_list_light_press" width="48" height="48"/>
         <image name="ic_menu_location_get_position" width="48" height="48"/>
-        <image name="ic_menu_point_to_point" width="48" height="48"/>
-        <image name="ic_menu_point_to_point_press" width="48" height="48"/>
         <image name="ic_menu_search" width="48" height="48"/>
         <image name="ic_menu_search_press" width="48" height="48"/>
     </resources>
