--- a/android/res/xml/prefs_main.xml
+++ b/android/res/xml/prefs_main.xml
@@ -186,8 +186,8 @@
         android:title="@string/pref_wunderlinq_support"
         android:defaultValue="false"
         android:order="1"/>
-  </android.support.v7.preference.PreferenceCategory>
-  <android.support.v7.preference.PreferenceCategory
+  </androidx.preference.PreferenceCategory>
+  <androidx.preference.PreferenceCategory
       android:key="@string/pref_information"
       android:title="@string/prefs_group_information"
       android:order="7">
